<resources>
    <string name="app_name">SampleApp</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign UP</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="birth">Birth</string>
    <string name="register">Register</string>
    <string name="menu_home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="artist_db">artist.db</string>
    <string name="search">search</string>
</resources>
